fix: fix bugs in common service

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -47,10 +47,8 @@
   "detailLabel": "Detail",
   "discoverNowLabel": "Discover now",
   "distanceLabel": "Distance ",
-  "distanceLabel": "Distance",
   "doneLabel": "Done",
   "editProfileLabel": "Edit Profile",
-  "editProfileLabel": "Edit",
   "emailLabel": "EMAIL",
   "emptyErrorLabel": "Please fill in",
   "emptyLabel": "Empty",
@@ -144,7 +142,6 @@
   "serviceDetailLabel": "Service details required",
   "serviceDetailsAppBarTitle": "Service details",
   "serviceFeeLabel": "Service fee",
-  "serviceFeeLabel": "Service fee",
   "serviceInforLabel": "Service information",
   "serviceInvoiceLabel": "Service Invoice",
   "serviceLabel": "Service ",
@@ -185,7 +182,6 @@
   "zaloPayLabel": "ZaloPay",
   "zaloPaymentLabel": "Pay with Zalo Pay",
   "otpCodeExpiredLabel": "Your otp code has been expired. We are sending you a new OTP code",
-  "invalidOTPLabel": "Invalid OTP code. Please enter again!",
   "loginSuccessLabel": "Login successfully",
   "unknowIssuesLabel": "Something went wrong, we are working on this problem",
   "enterPhoneNumberLabel": "Enter your phone number to continue",
@@ -199,14 +195,12 @@
   "repairItemsLabel": "repair items",
   "repairRequestSkipLabel": "Would you like to skip this repair request?",
   "needPriceQuotationLabel": "Need price quotation",
-  "idImgRequiredLabel": "You have to take a photo of your font id card",
   "providerArrivedLabel": "I arrived",
   "startRepairLabel": "Start the repair",
   "underRepairLabel": "Repairing",
   "notIncludeProductPriceLabel": "The cost here is only the service fee, not including the product price",
   "touchToQuoteLabel": "Tap to enter price",
   "enterPriceLabel": "Enter price",
-  "idImgRequiredLabel": "You have to take a photo of your font id card",
   "failLabel": "Fail",
   "productInfoLabel": "Product Info",
   "productName": "Product Name",
@@ -294,7 +288,7 @@
   "selectedProductLabel": "Consumer selected products. Please take a look and confirm then start",
   "cancelByUserLabel": "User aborted the request. We will take action on violated request",
   "sorryLabel": "We are very sorry for that",
-  "arrivedStartWorkingLabel":"Arrived? let's start repairing now",
-  "consumerPaidLabel": "Consumer paided! Let's finish now"
-
+  "arrivedStartWorkingLabel": "Arrived? let's start repairing now",
+  "consumerPaidLabel": "Consumer paided! Let's finish now",
+  "addCommonProductLabel": "Thêm sản phẩm có sẵn"
 }
