--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -49,7 +49,6 @@
   "distanceLabel": "Khoảng cách",
   "doneLabel": "Xong",
   "editProfileLabel": "Chỉnh sửa hồ sơ",
-  "editProfileLabel": "Chỉnh sửa",
   "emailLabel": "EMAIL",
   "emptyErrorLabel": "Vui lòng không để trống",
   "emptyLabel": "Trống",
@@ -76,7 +75,6 @@
   "imgCardLabel": "Ảnh CMT/CMND",
   "intoMoneyLabel": "Thành tiền",
   "invalidFormatLabel": "Định dạng không hợp lệ",
-  "invalidOTPLabel": "Mã OTP không hợp lệ. Vui lòng nhập lại!",
   "invalidPhoneNumberLabel": "Số điện thoại không hợp lệ",
   "invoiceDetailsLabel": "Chi tiết hoá đơn",
   "invoiceInformationLabel": "Thông tin hoá đơn",
@@ -141,7 +139,6 @@
   "serviceDescriptionLabel": "Mô tả (tối đa 100 ký tự)",
   "serviceDetailLabel": "Chi tiết dịch vụ yêu cầu",
   "serviceDetailsAppBarTitle": "Chi tiết dịch vụ",
-  "serviceFeeLabel": "Phí dịch vụ",
   "serviceFeeLabel": "Tiền công dịch vụ",
   "serviceInforLabel": "Thông tin dịch vụ",
   "serviceInvoiceLabel": "Hoá đơn dịch vụ",
@@ -197,7 +194,6 @@
   "repairItemsLabel": "hạng mục",
   "repairRequestSkipLabel": "Xác nhận bỏ qua yêu cầu sửa chữa này?",
   "needPriceQuotationLabel": "Cần báo giá",
-  "idImgRequiredLabel": "Bạn hãy chụp ảnh giấy phép kinh doanh của bạn",
   "providerArrivedLabel": "Tôi đã đến nơi",
   "startRepairLabel": "Bắt đầu sửa chữa",
   "underRepairLabel": "Đang sửa chữa",
@@ -258,7 +254,7 @@
   "chooseCommonLabel": "Chọn dịch vụ mẫu",
   "moneyUnit": "đ",
   "noServiceLabel": "Bạn không có dịch vụ nào.",
-  "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?",
+  "addCommonServiceQuestionLabel": "Đây là danh sách dịch vụ mẫu cho bạn tham khảo, bạn có thể chỉnh sửa hoặc thay đổi nội dung",
   "resultForLabel": "Kết quả cho",
   "resultCountLabel": "kết quả",
   "notFoundLabel": "Không tìm thấy",
@@ -279,8 +275,8 @@
   "needToUpdateInfoDesLabel": "Đó là căn cứ để tài khoản của bạn có thể được duyệt một cách nhanh nhất",
   "understoodLabel": "Đã hiểu",
   "unknownFailureLabel": "Rất tiếc, có lỗi xảy ra",
-  "duplicateNameSvLabel": "Tên dịch vụ không được phép để trùng",
-  "addCommonLabel": "Thêm dịch vụ mẫu",
+  "duplicateNameSvLabel": "Tên dịch vụ không được phép trùng lặp",
+  "addCommonLabel": "Thêm dịch vụ có sẵn",
   "hoursAgoLabel": "giờ trước",
   "todayLabel": "hôm nay",
   "backToHomePageLabel": "Trở về trang chủ",
@@ -291,7 +287,7 @@
   "selectedProductLabel": "Khách đã chọn sản phẩm. Hãy xem qua và xác nhận để bắt đầu",
   "cancelByUserLabel": "Khách đã huỷ yêu cầu. Chúng tôi sẽ trừng phạt những người dùng cố ý vi phạm bằng cách spam yêu cầu",
   "sorryLabel": "Chúng tôi rất xin lỗi về việc này",
-  "arrivedStartWorkingLabel":"Đến rồi thì bắt tay vào việc thôi",
-  "consumerPaidLabel": "Khách đã thanh toán. Kết thúc giao dịch thôi"
-
+  "arrivedStartWorkingLabel": "Đến rồi thì bắt tay vào việc thôi",
+  "consumerPaidLabel": "Khách đã thanh toán. Kết thúc giao dịch thôi",
+  "addCommonProductLabel": "Thêm sản phẩm có sẵn"
 }
