fix: fix bugs in common service and some other small bugs

--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -64,7 +64,7 @@
   "fixAgainLabel": "Sửa lại",
   "fullNameLabel": "TÊN ĐẦY ĐỦ",
   "gasStationLabel": "Tìm một trạm xăng",
-  "guideAndSupportLabel": "Hướng dẫn & Suport",
+  "guideAndSupportLabel": "Hướng dẫn & Hỗ trợ",
   "hiLabel": "Xin chào",
   "historyLabel": "Lịch sử",
   "homeLabel": "Trang chủ",
