--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -290,5 +290,6 @@
   "sorryLabel": "We are very sorry for that",
   "arrivedStartWorkingLabel": "Arrived? let's start repairing now",
   "consumerPaidLabel": "Consumer paided! Let's finish now",
-  "addCommonProductLabel": "Thêm sản phẩm có sẵn"
+  "addCommonProductLabel": "Add common service",
+  "userDismissedNoTransFeeLabel": "You missed a request from a consumer nearby. User aborted the request."
 }
