--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -84,7 +84,7 @@
   "loginPageTitle": "Chào mừng bạn đến với revup!",
   "logoutLabel": "Đăng xuất",
   "messagesCallForCustomersLabel": "Đối tác có thể trao đổi qua tin nhắn và cuộc gọi video với khách hàng để có sự chuẩn bị tốt nhất nhé!",
-  "messagesCheckInformation": "Đối tác vui lòng kiểm tra lại thông tin, hình ảnh bên trên đều chính xác, sau đó trượt để hoàn thành đơn.",
+  "messagesCheckInformation": "Đối tác vui lòng kiểm tra lại thông tin, hình ảnh bên trên đều chính xác, sau đó hoàn thành đơn.",
   "messagesSelectItemLabel": "Đối tác chọn hạng mục hoàn thành gửi đến khách hàng, rồi chờ xíu để khách hàng xác nhận nhé",
   "minutesLabel": "phút",
   "momoLabel": "MoMo",
