fix: map issue 105965
fix: sync total price

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -291,5 +291,6 @@
   "arrivedStartWorkingLabel": "Arrived? let's start repairing now",
   "consumerPaidLabel": "Consumer paided! Let's finish now",
   "addCommonProductLabel": "Add common service",
-  "userDismissedNoTransFeeLabel": "You missed a request from a consumer nearby. User aborted the request."
+  "userDismissedNoTransFeeLabel": "You missed a request from a consumer nearby. User aborted the request.",
+  "changeLangSuccessLabel": "Thay đổi ngôn ngữ thành công. Hãy khởi động lại ứng dụng để thấy sự thay đổi"
 }
