--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -290,5 +290,6 @@
   "arrivedStartWorkingLabel": "Bắt tay vào việc sửa chữa thôi",
   "consumerPaidLabel": "Khách đã thanh toán. Kết thúc giao dịch thôi",
   "addCommonProductLabel": "Thêm sản phẩm có sẵn",
-  "userDismissedNoTransFeeLabel": "Bạn đã lỡ 1 yêu cầu từ người dùng xung quanh"
+  "userDismissedNoTransFeeLabel": "Bạn đã lỡ 1 yêu cầu từ người dùng xung quanh",
+  "changeLangSuccessLabel": "Change language successfully. Please restart your application to see the change"
 }
