fix: fix some ui bugs

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -296,5 +296,6 @@
   "incomingVideoLabal": "Incoming Video Call",
   "yourProviderLabel": "Your consumer",
   "rejectCallLabel": "RejectCall",
-  "acceptCallLabel": "AcceptCall"
+  "acceptCallLabel": "AcceptCall",
+  "understoodReLabel": "Đã hiểu"
 }
